--- a/frontend/src/pages/login/AuthPage.scss
+++ b/frontend/src/pages/login/AuthPage.scss
@@ -37,7 +37,7 @@
     background: var(--color-glass-bg);
     border-radius: 25px;
     backdrop-filter: blur(20px);
-    border-bottom: 1px solid var(--color-border);
+    border: 1px solid var(--color-bg-border);
     z-index: 2;
 
     @media (max-width: 480px) {
