Исправлен бесконечный онбординг и все карточки на страницах выненсены в UI кит

--- a/frontend/src/shared/styles/variables/_spacing.scss
+++ b/frontend/src/shared/styles/variables/_spacing.scss
@@ -1,9 +1,10 @@
 // Отступы и размеры
+$spacing-xxs: 3px;
 $spacing-xs: 5px;
 $spacing-sm: 8px;
 $spacing-md: 10px;
 $spacing-base: 12px;
-$spacing-lg: 15px;
+$spacing-lg: 16px;
 $spacing-xl: 20px;
 $spacing-2xl: 25px;
 $spacing-3xl: 30px;
