--- a/frontend/src/pages/share-contact/ShareContactPage.scss
+++ b/frontend/src/pages/share-contact/ShareContactPage.scss
@@ -98,6 +98,10 @@
     border: 1px solid var(--color-border);
     border-radius: 24px;
     overflow: hidden;
+
+    div {
+      flex-direction: row;
+    }
   }
 
   &__card-check {
