--- a/frontend/src/pages/company/components/CompanyDetail.scss
+++ b/frontend/src/pages/company/components/CompanyDetail.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px 0 0;
+    padding: 16px 0;
   }
 
   &__topbar-title {
