--- a/frontend/src/pages/profile/ProfilePage.scss
+++ b/frontend/src/pages/profile/ProfilePage.scss
@@ -1,6 +1,6 @@
 .profile {
   min-height: 100vh;
-  padding: 0 16px 100px;
+  padding: 0 16px;
   width: 100%;
   max-width: 480px;
   margin: 0 auto;
@@ -73,6 +73,7 @@
     flex-direction: column;
     gap: 8px;
     width: 100%;
+    padding-bottom: 100px;
   }
 
   // Cards Section
