--- a/frontend/src/features/contact-profile/ui/ContactProfileView.scss
+++ b/frontend/src/features/contact-profile/ui/ContactProfileView.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  padding: 0 0 24px;
   position: relative;
 
   // Top Bar
@@ -13,7 +12,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 16px 0px;
-    position: sticky;
+    position: relative;
     top: 0;
     z-index: 10;
   }
@@ -227,6 +226,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    padding-bottom: 100px;
   }
 
   &__card-header {
