--- a/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
+++ b/frontend/src/pages/profile/components/ProfileTopBar/ProfileTopBar.scss
@@ -1,7 +1,7 @@
 @use "@/shared/styles/mixins/glass" as *;
 
 .profile-top-bar {
-  position: sticky;
+  position: relative;
   top: 0;
   z-index: 50;
   display: flex;
