--- a/frontend/src/shared/ui/Textarea/Textarea.scss
+++ b/frontend/src/shared/ui/Textarea/Textarea.scss
@@ -28,7 +28,7 @@
 
   &__field {
     width: 100%;
-    padding: 14px 24px;
+    padding: 14px 16px;
     border-radius: 25px;
     font-size: $font-size-base;
     border: 1px solid var(--color-border);
@@ -40,7 +40,7 @@
     font-family: $font-family-primary;
 
     &::placeholder {
-      text-align: center;
+      text-align: left;
     }
 
     &:focus {
