--- a/frontend/src/pages/login/AuthPage.scss
+++ b/frontend/src/pages/login/AuthPage.scss
@@ -12,10 +12,8 @@
   position: relative;
 
   @media (max-width: 480px) {
-    padding: 1rem;
+    padding: 1rem 1rem 0;
     justify-content: flex-start;
-    padding-top: max(1rem, env(safe-area-inset-top, 0px));
-    padding-bottom: max(1rem, env(safe-area-inset-bottom, 0px));
   }
 
   @media (max-height: 640px) {
@@ -23,24 +21,33 @@
     padding-top: 1rem;
   }
 
+  &__bg {
+    display: flex;
+    justify-content: center;
+  }
+
   &__glow {
     visibility: hidden;
-    position: absolute;
-    bottom: -30%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    pointer-events: none;
+    margin-top: -50px;
+    overflow: hidden;
 
     @media (max-width: 480px) {
       visibility: visible;
     }
 
     svg {
-      position: relative;
-      top: -30px;
+      flex-shrink: 0;
+      width: 400px;
+      height: 400px;
     }
   }
 
   &__container {
+    position: relative;
+    overflow: visible;
     width: 100%;
     max-width: 420px;
     padding: 2rem;
